unpackaged/main/default/objects/zkfedex__QueuedExportDetails__c/zkfedex__QueuedExportDetails__c.object-meta.xml
<CustomObject>
    <label>FedEx Queued Export Details</label>
    <nameField>
        <displayFormat>QED-{0000}</displayFormat>
        <label>Queued Export Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Queued Export Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>