unpackaged/main/default/objects/zkfedex__QueuedExportDetails__c/fields/zkfedex__ExportComplianceStatement__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ExportComplianceStatement__c</fullName>
    <label>Export Compliance Statement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>