unpackaged/main/default/objects/zkfedex__QueuedExportDetails__c/fields/zkfedex__PermitNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PermitNumber__c</fullName>
    <label>Permit Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>